--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,8 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql+pymysql://root:root@59.110.53.228:3306/eye_test
+sqlalchemy.url = mysql+pymysql://root:root@59.110.53.228:3306/eye_test2
+#sqlalchemy.url = mysql+pymysql://root:root@localhost/db_eye2
 
 
 [post_write_hooks]
